Fixed overlay height on mobile

--- a/style.css
+++ b/style.css
@@ -24,8 +24,7 @@ body {
   background-repeat: repeat;
   background-size: contain;
   background-position: center;
-  background-blend-mode: overlay;
-  height: 100vh;
+  height: 100%;
   width: 100%;
   z-index: -1;
 }
@@ -191,12 +190,6 @@ button {
   font-weight: bold;
   letter-spacing: 0.7px;
 }
-
-/* @media only screen and (max-width: 1000px) {
-  html {
-    font-size: 14px;
-  }
-} */
 
 @media only screen and (max-width: 850px) {
   html {
